update the notebook

--- a/notebook/chronos_forecasting.ipynb
+++ b/notebook/chronos_forecasting.ipynb
@@ -7,7 +7,7 @@
     "id": "view-in-github"
    },
    "source": [
-    "<a href=\"https://colab.research.google.com/github/TheaperDeng/Chronos-workshop/blob/branch-2.0/python/chronos/colab-notebook/chronos_forecasting.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/TheaperDeng/Chronos-workshop/blob/new-forecasting-notebook/notebook/chronos_forecasting.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
@@ -78,13 +78,13 @@
    },
    "outputs": [],
    "source": [
-    "# Install latest pre-release version of bigdl-chronos \n",
-    "# Installing bigdl-chronos from pip will automatically install pyspark, bigdl, and their dependencies.\n",
     "print(\"This block is designed to exit(crash) for refreshing installed pkg.\")\n",
-    "!pip install --pre --upgrade bigdl-chronos[all]\n",
+    "\n",
+    "!pip install --pre --upgrade bigdl-chronos[all] # Install latest pre-release version of bigdl-chronos \n",
     "!pip install neural-compressor==1.8.1  # install INC for quantization\n",
     "!pip uninstall -y torchtext  # uninstall torchtext to avoid version conflict\n",
-    "!pip install opencv-python-headless==4.1.2.30  # change opencv to avoid version conflict\n",
+    "!pip install opencv-python-headless==4.1.2.30  # change opencv to avoid version conflict\n",
+    "\n",
     "exit() # restart the runtime to refresh installed pkg"
    ]
   },
@@ -100,11 +100,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "devxHuDW-0Mb"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2022-02-04 08:49:47--  https://raw.githubusercontent.com/numenta/NAB/v1.0/data/realKnownCause/nyc_taxi.csv\n",
+      "正在解析主机 child-prc.intel.com (child-prc.intel.com)... 10.239.120.55\n",
+      "正在连接 child-prc.intel.com (child-prc.intel.com)|10.239.120.55|:913... 已连接。\n",
+      "已发出 Proxy 请求，正在等待回应... 200 OK\n",
+      "长度： 265771 (260K) [text/plain]\n",
+      "正在保存至: “nyc_taxi.csv”\n",
+      "\n",
+      "nyc_taxi.csv        100%[===================>] 259.54K   358KB/s    用时 0.7s    \n",
+      "\n",
+      "2022-02-04 08:49:49 (358 KB/s) - 已保存 “nyc_taxi.csv” [265771/265771])\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# download the dataset\n",
     "!wget https://raw.githubusercontent.com/numenta/NAB/v1.0/data/realKnownCause/nyc_taxi.csv"
@@ -112,15 +130,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "LVpFKkCX_3WF"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014-07-01 00:00:00</td>\n",
+       "      <td>10844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2014-07-01 00:30:00</td>\n",
+       "      <td>8127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2014-07-01 01:00:00</td>\n",
+       "      <td>6210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2014-07-01 01:30:00</td>\n",
+       "      <td>4656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2014-07-01 02:00:00</td>\n",
+       "      <td>3820</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            timestamp  value\n",
+       "0 2014-07-01 00:00:00  10844\n",
+       "1 2014-07-01 00:30:00   8127\n",
+       "2 2014-07-01 01:00:00   6210\n",
+       "3 2014-07-01 01:30:00   4656\n",
+       "4 2014-07-01 02:00:00   3820"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# load the dataset. The downloaded dataframe contains two columns, \"timestamp\" and \"value\".\n",
     "import pandas as pd\n",
-    "df = pd.read_csv(\"nyc_taxi.csv\", parse_dates=[\"timestamp\"])"
+    "df = pd.read_csv(\"nyc_taxi.csv\", parse_dates=[\"timestamp\"])\n",
+    "df.head()"
    ]
   },
   {
@@ -257,7 +345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Save & restore the forecaster."
+    "You can also quantize the forecaster to shrink the model size and improve inference throughput."
    ]
   },
   {
@@ -266,8 +354,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "forecaster.save(\"nyc_taxi.fxt\")\n",
-    "forecaster.load(\"nyc_taxi.fxt\")"
+    "forecaster.quantize((x, y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You may save & restore the (non-quantized & quantized) forecaster."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forecaster.save(\"nyc_taxi.fxt\", \"nyc_taxi_q.fxt\")\n",
+    "forecaster.load(\"nyc_taxi.fxt\", \"nyc_taxi_q.fxt\")"
    ]
   },
   {
@@ -547,7 +651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
