remove useless paramters

--- a/notebook/chronos_forecasting.ipynb
+++ b/notebook/chronos_forecasting.ipynb
@@ -404,9 +404,7 @@
    "source": [
     "import bigdl.orca.automl.hp as hp\n",
     "from bigdl.chronos.autots import AutoTSEstimator\n",
-    "auto_estimator = AutoTSEstimator(model='lstm', # the model name used for training\n",
-    "                                 search_space='normal', # a default hyper parameter search space\n",
-    "                                 past_seq_len=hp.randint(1, 10)) # hp sampling function of past_seq_len for auto-tuning"
+    "auto_estimator = AutoTSEstimator(model='lstm')"
    ]
   },
   {
