change the notebook to LSTM

--- a/notebook/chronos_forecasting.ipynb
+++ b/notebook/chronos_forecasting.ipynb
@@ -207,16 +207,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bigdl.chronos.forecaster.tcn_forecaster import TCNForecaster\n",
+    "from bigdl.chronos.forecaster import LSTMForecaster\n",
     "\n",
     "x, y = tsdata_train.to_numpy()\n",
     "# x.shape = (num of sample, lookback, num of input feature)\n",
     "# y.shape = (num of sample, horizon, num of output feature)\n",
     "\n",
-    "forecaster = TCNForecaster(past_seq_len=lookback,  # number of steps to look back\n",
-    "                           future_seq_len=horizon,  # number of steps to predict\n",
-    "                           input_feature_num=x.shape[-1],  # number of feature to use\n",
-    "                           output_feature_num=y.shape[-1],  # number of feature to predict\n",
+    "forecaster = LSTMForecaster(past_seq_len=lookback,  # number of steps to look back\n",
+    "                            input_feature_num=x.shape[-1],  # number of feature to use\n",
+    "                            output_feature_num=y.shape[-1],  # number of feature to predict\n",
     "                           )\n",
     "res = forecaster.fit((x, y), epochs=3)"
    ]
@@ -404,7 +403,9 @@
    "source": [
     "import bigdl.orca.automl.hp as hp\n",
     "from bigdl.chronos.autots import AutoTSEstimator\n",
-    "auto_estimator = AutoTSEstimator(model='lstm')"
+    "auto_estimator = AutoTSEstimator(model='lstm', # the model name used for training\n",
+    "                                 search_space='normal', # a default hyper parameter search space\n",
+    "                                 past_seq_len=hp.randint(1, 10)) # hp sampling function of past_seq_len for auto-tuning"
    ]
   },
   {
