--- a/notebook/chronos_forecasting.ipynb
+++ b/notebook/chronos_forecasting.ipynb
@@ -303,7 +303,7 @@
     "id": "zBdeoZzLWWlY"
    },
    "source": [
-    "### **Step 1: Init Orca Context** "
+    "### AutoTS Step 1: Init Orca Context"
    ]
   },
   {
@@ -346,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Step 2: Data transformation and feature engineering using Chronos TSDataset**\n",
+    "### AutoTS Step 2: Data transformation and feature engineering using Chronos TSDataset\n",
     "[TSDataset](https://bigdl.readthedocs.io/en/latest/doc/PythonAPI/Chronos/tsdataset.html) is our abstract of time series dataset for data transformation and feature engineering. Here we use it to preprocess the data."
    ]
   },
@@ -383,7 +383,7 @@
     "id": "ld-pV8e-Vb7D"
    },
    "source": [
-    "### **Step 3: Create an AutoTSEstimator**\n"
+    "### AutoTS Step 3: Create an AutoTSEstimator\n"
    ]
   },
   {
@@ -414,7 +414,7 @@
     "id": "CiTnHATGYn_f"
    },
    "source": [
-    "### **Step 4: Fit with AutoTSEstimator**"
+    "### AutoTS Step 4: Fit with AutoTSEstimator"
    ]
   },
   {
@@ -437,7 +437,7 @@
     "id": "6kEZlexfMm0z"
    },
    "source": [
-    "### **Step 5: Further deployment with TSPipeline**"
+    "### AutoTS Step 5: Further deployment with TSPipeline"
    ]
   },
   {
