--- a/notebook/chronos_forecasting.ipynb
+++ b/notebook/chronos_forecasting.ipynb
@@ -7,7 +7,7 @@
     "id": "view-in-github"
    },
    "source": [
-    "<a href=\"https://colab.research.google.com/github/intel-analytics/BigDL/blob/branch-2.0/python/chronos/colab-notebook/chronos_autots_nyc_taxi.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/analytics-zoo/Chronos-workshop/blob/main/notebook/chronos_forecasting.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
@@ -67,7 +67,7 @@
    "source": [
     "**Install bigdl-chronos**\n",
     "\n",
-    "You can install the latest pre-release version with chronos support using `pip install --pre --upgrade bigdl-chronos[all]`. "
+    "You can install the latest pre-release version with automl support using `pip install --pre --upgrade bigdl-chronos[all]`. "
    ]
   },
   {
@@ -78,10 +78,13 @@
    },
    "outputs": [],
    "source": [
-    "# Install latest pre-release version of bigdl-chronos\n",
-    "# Installing bigdl-chronos from pip will automatically install pyspark, bigdl, and their dependencies.\n",
-    "!pip install --pre --upgrade bigdl-chronos\n",
-    "!pip uninstall -y torchtext # uninstall torchtext to avoid version conflict\n",
+    "print(\"This block is designed to exit(crash) for refreshing installed pkg.\")\n",
+    "\n",
+    "!pip install --pre --upgrade bigdl-chronos[all] # Install latest pre-release version of bigdl-chronos \n",
+    "!pip install neural-compressor==1.8.1  # install INC for quantization\n",
+    "!pip uninstall -y torchtext  # uninstall torchtext to avoid version conflict\n",
+    "!pip install opencv-python-headless==4.1.2.30  # change opencv to avoid version conflict\n",
+    "\n",
     "exit() # restart the runtime to refresh installed pkg"
    ]
   },
@@ -91,7 +94,7 @@
     "id": "TsT-0y8w-6N5"
    },
    "source": [
-    "### **Step 0: Download & prepare dataset**\n",
+    "## **Step 0: Prepare dataset**\n",
     "We used NYC taxi passengers dataset in [Numenta Anomaly Benchmark (NAB)](https://github.com/numenta/NAB) for demo, which contains 10320 records, each indicating the total number of taxi passengers in NYC at a corresonponding time spot."
    ]
   },
@@ -117,7 +120,8 @@
    "source": [
     "# load the dataset. The downloaded dataframe contains two columns, \"timestamp\" and \"value\".\n",
     "import pandas as pd\n",
-    "df = pd.read_csv(\"nyc_taxi.csv\", parse_dates=[\"timestamp\"])"
+    "df = pd.read_csv(\"nyc_taxi.csv\", parse_dates=[\"timestamp\"])\n",
+    "df.head()"
    ]
   },
   {
@@ -198,29 +202,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Transform TSDataset to sampled numpy ndarray and feed them to forecaster."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bigdl.chronos.forecaster.tcn_forecaster import TCNForecaster\n",
+    "from bigdl.chronos.forecaster import LSTMForecaster\n",
     "\n",
     "x, y = tsdata_train.to_numpy()\n",
     "# x.shape = (num of sample, lookback, num of input feature)\n",
     "# y.shape = (num of sample, horizon, num of output feature)\n",
     "\n",
-    "forecaster = TCNForecaster(past_seq_len=lookback,  # number of steps to look back\n",
-    "                           future_seq_len=horizon,  # number of steps to predict\n",
-    "                           input_feature_num=x.shape[-1],  # number of feature to use\n",
-    "                           output_feature_num=y.shape[-1],  # number of feature to predict\n",
-    "                           seed=1)\n",
+    "forecaster = LSTMForecaster(past_seq_len=lookback,  # number of steps to look back\n",
+    "                            input_feature_num=x.shape[-1],  # number of feature to use\n",
+    "                            output_feature_num=y.shape[-1],  # number of feature to predict\n",
+    "                           )\n",
     "res = forecaster.fit((x, y), epochs=3)"
    ]
   },
@@ -261,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Save & restore the forecaster."
+    "You can also quantize the forecaster to shrink the model size and improve inference throughput."
    ]
   },
   {
@@ -270,8 +266,278 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "forecaster.save(\"nyc_taxi.fxt\")\n",
-    "forecaster.load(\"nyc_taxi.fxt\")"
+    "forecaster.quantize((x, y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You may save & restore the (non-quantized & quantized) forecaster."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forecaster.save(\"nyc_taxi.fxt\", \"nyc_taxi_q.fxt\")\n",
+    "forecaster.load(\"nyc_taxi.fxt\", \"nyc_taxi_q.fxt\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "l-l4vel5N3qP"
+   },
+   "source": [
+    "## **Distributed automl for time series forecasting using Chronos AutoTS**\n",
+    "\n",
+    "In this guide we will demonstrate how to use Chronos AutoTS for automated time seires forecasting in 5 simple steps."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "zBdeoZzLWWlY"
+   },
+   "source": [
+    "### AutoTS Step 1: Init Orca Context"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "RDPt2XTsT-Gv"
+   },
+   "outputs": [],
+   "source": [
+    "# import necesary libraries and modules\n",
+    "from bigdl.orca import init_orca_context, stop_orca_context\n",
+    "from bigdl.orca import OrcaContext"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "9VyfhD6HVQpm"
+   },
+   "source": [
+    "This is the only place where you need to specify local or distributed mode. View [Orca Context](https://analytics-zoo.readthedocs.io/en/latest/doc/Orca/Overview/orca-context.html) for more details. Note that argument ```init_ray_on_spark``` must be ```True``` for Chronos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "QAQp0FcUWaH3"
+   },
+   "outputs": [],
+   "source": [
+    "# recommended to set it to True when running bigdl-chronos in Jupyter notebook \n",
+    "OrcaContext.log_output = True # (this will display terminal's stdout and stderr in the Jupyter notebook).\n",
+    "\n",
+    "init_orca_context(cluster_mode=\"local\", cores=4, init_ray_on_spark=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### AutoTS Step 2: Data transformation and feature engineering using Chronos TSDataset\n",
+    "[TSDataset](https://bigdl.readthedocs.io/en/latest/doc/PythonAPI/Chronos/tsdataset.html) is our abstract of time series dataset for data transformation and feature engineering. Here we use it to preprocess the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bigdl.chronos.data import TSDataset\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "tsdata_train, tsdata_val, tsdata_test = TSDataset.from_pandas(df, # the dataframe to load\n",
+    "                                                              dt_col=\"timestamp\",  # the column name specifying datetime\n",
+    "                                                              target_col=\"value\", # the column name to predict\n",
+    "                                                              with_split=True, # split the dataset into 3 parts\n",
+    "                                                              val_ratio=0.1, # validation set ratio\n",
+    "                                                              test_ratio=0.1) # test set ratio\n",
+    "\n",
+    "# for each tsdataset, we \n",
+    "# 1. generate datetime feature columns.\n",
+    "# 2. impute the dataset with last occured value.\n",
+    "# 3. scale the dataset with standard scaler, fit = true for train data.\n",
+    "standard_scaler = StandardScaler()\n",
+    "for tsdata in [tsdata_train, tsdata_val, tsdata_test]:\n",
+    "    tsdata.gen_dt_feature()\\\n",
+    "          .impute(mode=\"last\")\\\n",
+    "          .scale(standard_scaler, fit=(tsdata is tsdata_train))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "ld-pV8e-Vb7D"
+   },
+   "source": [
+    "### AutoTS Step 3: Create an AutoTSEstimator\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[AutoTSEstimator](https://bigdl.readthedocs.io/en/latest/doc/PythonAPI/Chronos/autotsestimator.html) is our Automated TimeSeries Estimator for time series forecasting task."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "mAMxwh-KBrdt"
+   },
+   "outputs": [],
+   "source": [
+    "import bigdl.orca.automl.hp as hp\n",
+    "from bigdl.chronos.autots import AutoTSEstimator\n",
+    "auto_estimator = AutoTSEstimator(model='lstm', # the model name used for training\n",
+    "                                 search_space='normal', # a default hyper parameter search space\n",
+    "                                 past_seq_len=hp.randint(1, 10)) # hp sampling function of past_seq_len for auto-tuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "CiTnHATGYn_f"
+   },
+   "source": [
+    "### AutoTS Step 4: Fit with AutoTSEstimator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "byQQ_U1fC_11"
+   },
+   "outputs": [],
+   "source": [
+    "# fit with AutoTSEstimator for a returned TSPipeline\n",
+    "ts_pipeline = auto_estimator.fit(data=tsdata_train, # train dataset\n",
+    "                                 validation_data=tsdata_val, # validation dataset\n",
+    "                                 epochs=5) # number of epochs to train in each trial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "6kEZlexfMm0z"
+   },
+   "source": [
+    "### AutoTS Step 5: Further deployment with TSPipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[TSPipeline](https://analytics-zoo.readthedocs.io/en/latest/doc/PythonAPI/Chronos/autotsestimator.html#tspipeline-experimental) is our E2E solution for time series forecasting task."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "6bhoBcE1Mbn6"
+   },
+   "outputs": [],
+   "source": [
+    "# predict with the best trial\n",
+    "y_pred = ts_pipeline.predict(tsdata_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "IHVZKesINPTW"
+   },
+   "outputs": [],
+   "source": [
+    "# evaluate the result pipeline\n",
+    "mse, smape = ts_pipeline.evaluate(tsdata_test, metrics=[\"mse\", \"smape\"])\n",
+    "print(\"Evaluate: the mean square error is\", mse)\n",
+    "print(\"Evaluate: the smape value is\", smape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot the result\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "lookback = auto_estimator.get_best_config()['past_seq_len']\n",
+    "groundtruth_unscale = tsdata_test.unscale().to_pandas()[lookback - 1:]\n",
+    "\n",
+    "plt.figure(figsize=(16,6))\n",
+    "plt.plot(groundtruth_unscale[\"timestamp\"], y_pred[:,0,0])\n",
+    "plt.plot(groundtruth_unscale[\"timestamp\"], groundtruth_unscale[\"value\"])\n",
+    "plt.legend([\"prediction\", \"ground truth\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "fV7yWUlHNh0D"
+   },
+   "outputs": [],
+   "source": [
+    "# save the pipeline\n",
+    "my_ppl_file_path = \"/tmp/saved_pipeline\"\n",
+    "ts_pipeline.save(my_ppl_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "4rnB5UYVNuSN"
+   },
+   "outputs": [],
+   "source": [
+    "# restore the pipeline for further deployment\n",
+    "from bigdl.chronos.autots import TSPipeline\n",
+    "loaded_ppl = TSPipeline.load(my_ppl_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "nC4KhlHxXakk"
+   },
+   "outputs": [],
+   "source": [
+    "# Stop orca context when your program finishes\n",
+    "stop_orca_context()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# show a tensorboard view\n",
+    "%load_ext tensorboard\n",
+    "%tensorboard --logdir /tmp/autots_estimator/autots_estimator_leaderboard/"
    ]
   }
  ],
@@ -279,7 +545,7 @@
   "colab": {
    "collapsed_sections": [],
    "include_colab_link": true,
-   "name": "chronos_autots_nyc_taxi.ipynb",
+   "name": "chronos_experimental_autots_nyc_taxi.ipynb",
    "provenance": []
   },
   "kernelspec": {
