--- a/notebook/chronos_forecasting.ipynb
+++ b/notebook/chronos_forecasting.ipynb
@@ -7,7 +7,7 @@
     "id": "view-in-github"
    },
    "source": [
-    "<a href=\"https://colab.research.google.com/github/analytics-zoo/Chronos-workshop/blob/main/notebook/chronos_forecasting.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/intel-analytics/Chronos-workshop/blob/main/notebook/chronos_forecasting.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
@@ -130,7 +130,7 @@
    "source": [
     "## **Time series forecasting using Chronos Forecaster**\n",
     "### Forecaster Step1. Data transformation and feature engineering using Chronos TSDataset \n",
-    "[TSDataset](https://analytics-zoo.readthedocs.io/en/latest/doc/PythonAPI/Chronos/tsdataset.html) is our abstract of time series dataset for data transformation and feature engineering. Here we use it to preprocess the data."
+    "[TSDataset](https://bigdl.readthedocs.io/en/latest/doc/PythonAPI/Chronos/tsdataset.html) is our abstract of time series dataset for data transformation and feature engineering. Here we use it to preprocess the data."
    ]
   },
   {
@@ -444,7 +444,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[TSPipeline](https://analytics-zoo.readthedocs.io/en/latest/doc/PythonAPI/Chronos/autotsestimator.html#tspipeline-experimental) is our E2E solution for time series forecasting task."
+    "[TSPipeline](https://bigdl.readthedocs.io/en/latest/doc/PythonAPI/Chronos/autotsestimator.html#tspipeline) is our E2E solution for time series forecasting task."
    ]
   },
   {
@@ -545,7 +545,7 @@
   "colab": {
    "collapsed_sections": [],
    "include_colab_link": true,
-   "name": "chronos_experimental_autots_nyc_taxi.ipynb",
+   "name": "chronos_forecasting.ipynb",
    "provenance": []
   },
   "kernelspec": {
