add new notebook

--- a/notebook/chronos_anomaly_detection.ipynb
+++ b/notebook/chronos_anomaly_detection.ipynb
@@ -65,7 +65,7 @@
    "source": [
     "**Install bigdl-chronos**\n",
     "\n",
-    "You can install the latest pre-release version using `pip install --pre --upgrade bigdl-chronos[all]`. "
+    "You can install the latest pre-release version using `pip install --pre --upgrade bigdl-chronos`. "
    ]
   },
   {
@@ -79,7 +79,7 @@
     "# Install latest pre-release version of bigdl-chronos\n",
     "# Installing bigdl-chronos from pip will automatically install pyspark, bigdl, and their dependencies.\n",
     "!pip install --pre --upgrade bigdl-chronos\n",
-    "!pip uninstall -y torchtext # uninstall torchtext to avoid version conflict\n",
+    "\n",
     "exit() # refresh the pkg you just install"
    ]
   },
