--- a/notebook/chronos_automl.ipynb
+++ b/notebook/chronos_automl.ipynb
@@ -88,20 +88,10 @@
     "print(\"This block is designed to exit(crash) for refreshing installed pkg.\")\n",
     "\n",
     "# Install latest pre-release version of bigdl-chronos\n",
-    "!pip install --pre --upgrade bigdl-chronos[pytorch]\n",
-    "\n",
-    "# acclerators\n",
-    "!pip install onnx\n",
-    "!pip install onnxruntime\n",
-    "!pip install openvino-dev\n",
-    "\n",
-    "# for quantization\n",
-    "!pip install neural-compressor==1.11\n",
+    "!pip install --pre --upgrade bigdl-chronos[pytorch,distributed]==2.1.0b20220811\n",
     "\n",
     "# fix confict with google colab\n",
     "!pip uninstall -y torchtext\n",
-    "!pip install numpy==1.21\n",
-    "!pip install opencv-python-headless==4.1.2.30\n",
     "\n",
     "# restart the runtime to refresh installed pkg\n",
     "exit()"
@@ -132,78 +122,163 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "l-l4vel5N3qP"
+   },
    "source": [
-    "## **Time series forecasting using Chronos Forecaster**"
+    "## **Distributed automl for time series forecasting using Chronos AutoTS**\n",
+    "\n",
+    "In this guide we will demonstrate how to use Chronos AutoTS for automated time seires forecasting in 5 simple steps."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "zBdeoZzLWWlY"
+   },
+   "source": [
+    "### AutoTS Step 1: Init Orca Context"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "RDPt2XTsT-Gv"
+   },
+   "outputs": [],
+   "source": [
+    "# import necessary libraries and modules\n",
+    "from bigdl.orca import init_orca_context, stop_orca_context"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "9VyfhD6HVQpm"
+   },
+   "source": [
+    "This is the only place where you need to specify local or distributed mode. View [Orca Context](https://analytics-zoo.readthedocs.io/en/latest/doc/Orca/Overview/orca-context.html) for more details. Note that argument ```init_ray_on_spark``` must be ```True``` for Chronos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "QAQp0FcUWaH3"
+   },
+   "outputs": [],
+   "source": [
+    "init_orca_context(cluster_mode=\"local\", cores=4, init_ray_on_spark=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Forecaster Step1. Data transformation and feature engineering using Chronos TSDataset \n",
+    "### AutoTS Step 2: Data transformation and feature engineering using Chronos TSDataset\n",
     "[TSDataset](https://bigdl.readthedocs.io/en/latest/doc/PythonAPI/Chronos/tsdataset.html) is our abstract of time series dataset for data transformation and feature engineering. Here we use it to preprocess the data."
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Preprocess the datasets. Here we perform:\n",
-    "- deduplicate: remove those identical data records\n",
-    "- impute: fill the missing values\n",
-    "- gen_dt_feature: generate feature from datetime (e.g. month, day...)\n",
-    "- scale: scale each feature to standard distribution.\n",
-    "- roll: sample the data with sliding window.\n",
-    "\n",
-    "For forecasting task, we will look back 3 hours' historical data (6 records) and predict the value of next 30 miniutes (1 records).\n",
-    "\n",
-    "We perform the same transformation processes on train, valid and test set."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
+    "tsdata_train, tsdata_val, tsdata_test = get_public_dataset(\"nyc_taxi\")\n",
     "\n",
-    "past_seq_len, future_seq_len = 96, 1\n",
-    "\n",
-    "scaler = StandardScaler()\n",
-    "for tsdata in [tsdata_train, tsdata_valid, tsdata_test]:\n",
-    "    tsdata.impute()\\\n",
-    "          .scale(scaler, fit=(tsdata is tsdata_train))\\\n",
-    "          .roll(lookback=past_seq_len, horizon=future_seq_len)"
+    "# for each tsdataset, we \n",
+    "# 1. generate datetime feature columns.\n",
+    "# 2. impute the dataset with last occured value.\n",
+    "# 3. scale the dataset with standard scaler, fit = true for train data.\n",
+    "standard_scaler = StandardScaler()\n",
+    "for tsdata in [tsdata_train, tsdata_val, tsdata_test]:\n",
+    "    tsdata.gen_dt_feature()\\\n",
+    "          .impute(mode=\"last\")\\\n",
+    "          .scale(standard_scaler, fit=(tsdata is tsdata_train))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "ld-pV8e-Vb7D"
+   },
+   "source": [
+    "### AutoTS Step 3: Create an AutoTSEstimator\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Forecaster Step 2: Time series forecasting using Chronos Forecaster\n",
-    "After preprocessing the datasets. We can use [Chronos Forecaster](https://bigdl.readthedocs.io/en/latest/doc/PythonAPI/Chronos/forecasters.html) to handle the forecasting tasks."
+    "[AutoTSEstimator](https://bigdl.readthedocs.io/en/latest/doc/PythonAPI/Chronos/autotsestimator.html) is our Automated TimeSeries Estimator for time series forecasting task."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "mAMxwh-KBrdt"
+   },
    "outputs": [],
    "source": [
-    "from bigdl.chronos.forecaster import TCNForecaster\n",
-    "\n",
-    "forecaster = TCNForecaster.from_tsdataset(tsdata_train, num_channels=[16]*3)\n",
-    "forecaster.fit(tsdata_train)"
+    "import bigdl.orca.automl.hp as hp\n",
+    "from bigdl.chronos.autots import AutoTSEstimator\n",
+    "auto_estimator = AutoTSEstimator(model='tcn', # the model name used for training\n",
+    "                                 search_space='normal', # a default hyper parameter search space\n",
+    "                                 past_seq_len=hp.randint(48, 96)) # hp sampling function of past_seq_len for auto-tuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "CiTnHATGYn_f"
+   },
+   "source": [
+    "### AutoTS Step 4: Fit with AutoTSEstimator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "byQQ_U1fC_11"
+   },
+   "outputs": [],
+   "source": [
+    "# fit with AutoTSEstimator for a returned TSPipeline\n",
+    "ts_pipeline = auto_estimator.fit(data=tsdata_train, # train dataset\n",
+    "                                 validation_data=tsdata_val, # validation dataset\n",
+    "                                 epochs=5) # number of epochs to train in each trial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "6kEZlexfMm0z"
+   },
+   "source": [
+    "### AutoTS Step 5: Further deployment with TSPipeline"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Forecaster Step 3: Evaluate your fitted forecaster\n",
-    "Use fitted forecaster to predict test data and plot the result"
+    "[TSPipeline](https://bigdl.readthedocs.io/en/latest/doc/PythonAPI/Chronos/autotsestimator.html#tspipeline) is our E2E solution for time series forecasting task."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "6bhoBcE1Mbn6"
+   },
+   "outputs": [],
+   "source": [
+    "# predict with the best trial\n",
+    "y_pred = ts_pipeline.predict(tsdata_test)"
    ]
   },
   {
@@ -212,44 +287,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_test, y_test = tsdata_test.to_numpy()\n",
-    "pred = forecaster.predict(x_test)\n",
-    "pred_unscale, groundtruth_unscale = tsdata_test.unscale_numpy(pred), tsdata_test.unscale_numpy(y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# plot the result\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "plt.figure(figsize=(24,6))\n",
-    "plt.plot(pred_unscale[:,:,0])\n",
-    "plt.plot(groundtruth_unscale[:,:,0])\n",
+    "lookback = auto_estimator.get_best_config()['past_seq_len']\n",
+    "groundtruth_unscale = tsdata_test.unscale().to_pandas()[lookback - 1:]\n",
+    "\n",
+    "plt.figure(figsize=(16,6))\n",
+    "plt.plot(groundtruth_unscale[\"timestamp\"], y_pred[:,0,0])\n",
+    "plt.plot(groundtruth_unscale[\"timestamp\"], groundtruth_unscale[\"value\"])\n",
     "plt.legend([\"prediction\", \"ground truth\"])"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "fV7yWUlHNh0D"
+   },
+   "outputs": [],
    "source": [
-    "### Forecaster Step 4: Further Optimize my forecaster"
+    "# save the pipeline\n",
+    "my_ppl_file_path = \"/tmp/saved_pipeline\"\n",
+    "ts_pipeline.save(my_ppl_file_path)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "4rnB5UYVNuSN"
+   },
+   "outputs": [],
    "source": [
-    "#### Use some accelerators for inferencing\n",
-    "\n",
-    "Accelerate my forecaster! That's a normal request from many of our customers. One way to do this is to adopt some accelerator such as:\n",
-    "\n",
-    "- onnxruntime: an accelerator provided by Microsoft on onnx structure.\n",
-    "- openvino: an inference engine provided by Intel\n",
-    "\n",
-    "Adopting them in Chronos is super easy, just call `predict_with_onnx` and `predict_with_openvino`, the forecaster abstraction will hide all the complex calling for our users."
+    "# restore the pipeline for further deployment\n",
+    "from bigdl.chronos.autots import TSPipeline\n",
+    "loaded_ppl = TSPipeline.load(my_ppl_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "nC4KhlHxXakk"
+   },
+   "outputs": [],
+   "source": [
+    "# Stop orca context when your program finishes\n",
+    "stop_orca_context()"
    ]
   },
   {
@@ -258,70 +343,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred_onnxruntime = forecaster.predict_with_onnx(x_test)\n",
-    "pred_openvino = forecaster.predict_with_openvino(x_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from bigdl.chronos.metric.forecast_metrics import Evaluator\n",
-    "\n",
-    "def func_original():\n",
-    "    forecaster.predict(x_test[0:1, :, :])\n",
-    "def func_onnxruntime():\n",
-    "    forecaster.predict_with_onnx(x_test[0:1, :, :])\n",
-    "def func_openvino():\n",
-    "    forecaster.predict_with_openvino(x_test[0:1, :, :])\n",
-    "\n",
-    "print(\"original pytorch runtime (ms):\", Evaluator.get_latency(func_original))\n",
-    "print(\"use accelerator (onnxruntime) (ms):\", Evaluator.get_latency(func_onnxruntime))\n",
-    "print(\"use accelerator (openvino) (ms):\", Evaluator.get_latency(func_openvino))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Quantize my forecaster\n",
-    "\n",
-    "Quantization has become more and more important in model serving and edge environment, since it can help you\n",
-    "\n",
-    "- improve inference throughput and latency\n",
-    "- shrink the forecaster's size\n",
-    "\n",
-    "In Chronos forecaster, `forecaster.quantize` will call Intel Neural Compressor and hide the complex setting to our users."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "forecaster.quantize(tsdata_train.to_numpy())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Forecaster Step 5: Save my forecaster\n",
-    "\n",
-    "You may save & restore the (non-quantized & quantized) forecaster."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "forecaster.save(\"nyc_taxi.fxt\", \"nyc_taxi_q.fxt\")\n",
-    "forecaster.load(\"nyc_taxi.fxt\", \"nyc_taxi_q.fxt\")"
+    "# show a tensorboard view\n",
+    "%load_ext tensorboard\n",
+    "%tensorboard --logdir /tmp/autots_estimator/autots_estimator_leaderboard/"
    ]
   }
  ],
