--- a/notebook/chronos_automl.ipynb
+++ b/notebook/chronos_automl.ipynb
@@ -117,7 +117,7 @@
    "source": [
     "from bigdl.chronos.data.repo_dataset import get_public_dataset\n",
     "\n",
-    "tsdata_train, tsdata_valid, tsdata_test = get_public_dataset(\"nyc_taxi\")"
+    "tsdata_train, tsdata_val, tsdata_test = get_public_dataset(\"nyc_taxi\")"
    ]
   },
   {
@@ -186,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsdata_train, tsdata_val, tsdata_test = get_public_dataset(\"nyc_taxi\")\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "# for each tsdataset, we \n",
     "# 1. generate datetime feature columns.\n",
@@ -227,7 +227,7 @@
     "from bigdl.chronos.autots import AutoTSEstimator\n",
     "auto_estimator = AutoTSEstimator(model='tcn', # the model name used for training\n",
     "                                 search_space='normal', # a default hyper parameter search space\n",
-    "                                 past_seq_len=hp.randint(48, 96)) # hp sampling function of past_seq_len for auto-tuning"
+    "                                 past_seq_len=hp.randint(24, 48)) # hp sampling function of past_seq_len for auto-tuning"
    ]
   },
   {
@@ -250,7 +250,7 @@
     "# fit with AutoTSEstimator for a returned TSPipeline\n",
     "ts_pipeline = auto_estimator.fit(data=tsdata_train, # train dataset\n",
     "                                 validation_data=tsdata_val, # validation dataset\n",
-    "                                 epochs=5) # number of epochs to train in each trial"
+    "                                 epochs=1)  # number of epochs to train in each trial"
    ]
   },
   {
