--- a/notebook/chronos_forecasting.ipynb
+++ b/notebook/chronos_forecasting.ipynb
@@ -1,6 +1,14 @@
 {
   "cells": [
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/intel-analytics/Chronos-workshop/blob/main/notebook/chronos_forecasting.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "xgV_QLGE9Lox"
@@ -325,6 +333,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "iLG8_dpIzZxZ"
+      },
+      "outputs": [],
       "source": [
         "from bigdl.chronos.metric.forecast_metrics import Evaluator\n",
         "\n",
@@ -332,12 +345,7 @@
         "    forecaster.predict(x_test[0:1, :, :], quantize=True)\n",
         "\n",
         "print(\"use accelerator (quantize) (ms):\", Evaluator.get_latency(func_quantize))"
-      ],
-      "metadata": {
-        "id": "iLG8_dpIzZxZ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -364,16 +372,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "q4sOiJjyxT4C"
+      },
+      "outputs": [],
       "source": [
         "forecaster.export_onnx_file(dirname='fp32_onnx')\n",
         "forecaster.export_openvino_file(dirname='fp32_openvino')\n",
         "forecaster.export_torchscript_file(dirname='fp32_torchscript')"
-      ],
-      "metadata": {
-        "id": "q4sOiJjyxT4C"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
   ],
   "metadata": {
