update other 2 notebooks

--- a/notebook/chronos_automl.ipynb
+++ b/notebook/chronos_automl.ipynb
@@ -88,7 +88,7 @@
     "print(\"This block is designed to exit(crash) for refreshing installed pkg.\")\n",
     "\n",
     "# Install latest pre-release version of bigdl-chronos\n",
-    "!pip install --pre --upgrade bigdl-chronos[pytorch,distributed]==2.1.0b20220811\n",
+    "!pip install --pre --upgrade bigdl-chronos-spark3[pytorch,distributed]\n",
     "\n",
     "# fix confict with google colab\n",
     "!pip uninstall -y torchtext\n",
