--- a/notebook/chronos_anomaly_detection.ipynb
+++ b/notebook/chronos_anomaly_detection.ipynb
@@ -77,7 +77,6 @@
    "outputs": [],
    "source": [
     "# Install latest pre-release version of bigdl-chronos\n",
-    "# Installing bigdl-chronos from pip will automatically install pyspark, bigdl, and their dependencies.\n",
     "!pip install --pre --upgrade bigdl-chronos\n",
     "\n",
     "exit() # refresh the pkg you just install"
@@ -227,7 +226,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.6.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
