update some doc

--- a/notebook/chronos_forecasting.ipynb
+++ b/notebook/chronos_forecasting.ipynb
@@ -58,6 +58,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "I_OS4HKJMNpv"
@@ -71,7 +72,7 @@
         "- This may take 3-5min according to the network condition, google colab has a pre-defined environment which makes the installation more complex.\n",
         "- This block is designed to exit(crash) for refreshing installed pkg. If you see something like `\"Your session crashed for an unknown reason.\"` then your installation is succeeded.\n",
         "\n",
-        "You may refer to [here](https://bigdl.readthedocs.io/en/latest/doc/Chronos/Overview/chronos.html#install) for detailed installation information."
+        "You may refer to [here](https://bigdl.readthedocs.io/en/latest/doc/Chronos/Overview/install.html) for detailed installation information."
       ]
     },
     {
